--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -53,119 +53,112 @@
               <div class="two-col hero">
                 <div class="hero">
                   <div class="h-row">
-                    <h1>Learn and grow</h1>
+                    <h1 class="gradient">Engineer your career as</h1>
                   </div>
                   <div class="h-row">
-                    <h1 id="profession">as <span id="changingProfession">Data Engineer</span></h1>
+                    <h1 id="profession"><span id="changingProfession">Data Engineer</span></h1>
                    </div>
-                  <p>Join the most engaging data community in North America.</p>
+                  <p>Join North America's top data community and achieve your dream career ✨</p>
                   <a href="#membership">
                     <button class="cta-filled">Become a member</button>
                   </a>  
                 </div> 
-                <img src="/assets/images/hero-pic.png"/>
+                <!-- <img src="/assets/images/hero-pic.png"/> -->
               </div>            
             </section>
 
             <section class="photo">
               <img src="/assets/images/community.png" />
             </section>
-
-              <!-- Surfalytics goal -->
-            <section class="goal-section">
-              <h4>Surfalytics community helps you with following:</h4>
-              <div class="tab-block-mobile">
-                <details>
-                  <summary>Landing your first data job</summary>
-                  <br>
-                  <p>Searching for your first data job or going through the job search process again can feel daunting.</p>
-                  <p>With a mentor you will:</p>
-                  <ul>
-                    <li>gain a deeper understanding of the data recruiting landscape in North America</li>
-                    <li>strengthen your resume and make it tailored to the position you are applying for</li>
-                    <li>practise mock interviews</li>
-                    <li>receive guidance on how to negotiate job offers</li>
-                  </ul>
-                  <p>In our community you will build a competitive projects portfolio and develop your professional network.</p>
-                </details>
-                <details>
-                  <summary>Levelling up your career</summary>
-                  <br>
-                  <p>Moving from a middle-level role to a senior position can be a challenging journey, but it becomes significantly more achievable with the guidance of a skilled career coach.</p>
-                  <p>Don't let the obstacles in your way hold you back from achieving your full potential. </p>
-                  <p>A data career mentor will work with you to create a tailored career roadmap. They will assess your skills, strengths, and weaknesses, and then craft a step-by-step plan that aligns with your goals.</p>
-                </details>
-                <details>
-                  <summary>Pivoting from non-technical Analyst role to Data Engineer role</summary>
-                  <br>
-                  <p>Are you currently in a non-technical analyst role but dream of stepping into the dynamic field of data engineering?</p>
-                  <p>Get personalized guidance from a data mentor in bridging the gap from a non-technical background to a data engineer role.</p>
-                  <ul>
-                    <li>Assessment and goal setting</li>
-                    <li>Learning Path</li>
-                    <li>Skill development and portfolio building</li>
-                    <li>Networking opportunities</li>
-                    <li>Ongoing support</li>
-                  </ul>
-                </details>
-              </div>
-              <div class="tab-block">
-
-                <div class="tab">
-                  <button class="tablinks" onclick="openTab(event,'Job')" id="defaultOpen">
-                    Landing your first data job
-                    <div class="icon">
-                      <iconify-icon icon="solar:arrow-right-linear" style="color: #2B3673;" width="44"></iconify-icon>
-                    </div>
-                  </button>
-                  <button class="tablinks" onclick="openTab(event, 'Career')">
-                    Levelling up your career
-                    <div class="icon">
-                      <iconify-icon icon="solar:arrow-right-linear" style="color: #2B3673;" width="44"></iconify-icon>
-                    </div>
-                  </button>
-                  <button class="tablinks" onclick="openTab(event, 'Pivot')">
-                    Pivoting from non-technical <br> Analyst role to Data Engineer role
-                    <div class="icon">
-                      <iconify-icon icon="solar:arrow-right-linear" style="color: #2B3673;" width="44"></iconify-icon>
-                    </div>
-                  </button>
+            
+            <!-- About Surfalytics -->
+            <section>
+              <div class="abt-section card-color">
+                <div class="abt-left">
+                  <h5>Your Hub for</h5>
+                  <h2 class="gradient">Data Insights<br>
+                    Networking and<br>
+                    Professional Growth</h2>
                 </div>
-
-                <div id="Job" class="tabcontent">
-                  <p>Searching for your first data job or going through the job search process again can feel daunting.</p>
-                  <p>With a mentor you will:</p>
-                  <ul>
-                    <li>gain a deeper understanding of the data recruiting landscape in North America</li>
-                    <li>strengthen your resume and make it tailored to the position you are applying for</li>
-                    <li>practise mock interviews</li>
-                    <li>receive guidance on how to negotiate job offers</li>
-                  </ul>
-                  <p>In our community you will build a competitive projects portfolio and develop your professional network.</p>
-                </div> 
-                <div id="Career" class="tabcontent">
-                  <p>Moving from a middle-level role to a senior position can be a challenging journey, but it becomes significantly more achievable with the guidance of a skilled career coach.</p>
-                  <p>Don't let the obstacles in your way hold you back from achieving your full potential. </p>
-                  <p>A data career mentor will work with you to create a tailored career roadmap. They will assess your skills, strengths, and weaknesses, and then craft a step-by-step plan that aligns with your goals.</p>
-                </div>
-                <div id="Pivot" class="tabcontent">
-                  <p>Are you currently in a non-technical analyst role but dream of stepping into the dynamic field of data engineering?</p>
-                  <p>Get personalized guidance from a data mentor in bridging the gap from a non-technical background to a data engineer role.</p>
-                  <ul>
-                    <li>Assessment and goal setting</li>
-                    <li>Learning Path</li>
-                    <li>Skill development and portfolio building</li>
-                    <li>Networking opportunities</li>
-                    <li>Ongoing support</li>
-                  </ul>
-                </div>
+                <div class="abt-right">
+                  <p>Welcome to the Surfalytics Data Community, where we are dedicated to engineering your data career and helping you build a life you don't need a vacation from.</p>
+                  <p>Our community is designed for data enthusiasts and professionals passionate about advancing their careers and achieving their dreams.</p>
+                  <p>Our mission is to empower data professionals by providing the resources, connections, and opportunities needed to excel in data industry.</p>
+                  <a href="/pages/about">Learn more about us</a>
+                </div>  
               </div>
             </section>
-            
+
+            <!-- Unleash your potential - key offers -->
+          <section>
+            <h2 class="centered gradient">Unleash Your Potential</h2>
+            <div class="potential-wrap">
+              <div class="potential-card card-color">
+                <h4>Land your dream job worldwide</h4>
+                <p>Access to top-tier resources and mentorship to help you navigate your career path in data analytics and engineering.</p>
+              </div>
+              <div class="potential-card card-color">
+                <h4>Increase your compensation</h4>
+                <p>Explore tools and strategies to dramatically increase your earning potential in the data industry.</p>
+              </div>
+              <div class="potential-card card-color">
+                <h4>Elevate your data skills</h4>
+                <p>Continuous learning through exclusive courses and workshops will keep you at the forefront of the data field.</p>
+              </div>
+            </div>
+          </section>
+
+          <!-- WHY DATA PROFESSIONALS CHOOSE SURFALYTICS -->
+
+          <section>
+            <h2 class="centered gradient">Why Data Professionals Choose Surfalytics</h2>
+            <div class="perks-wrap">
+              <div class="perks-card card-interactive card-color">
+                <div class="perks-info">
+                  <h4>Collaborative learning environment</h4>
+                  <p>We help each other understand complex concepts and solve challenging data problems. Together we learn faster and streamline the professional growth.</p>
+                </div>
+                <img src="/assets/images/collaborative-learning-env.png" />
+              </div>
+              <div class="perks-card card-interactive card-color">
+                <img src="/assets/images/emotion-support.png" />
+                <div class="perks-info">
+                  <h4>Hands-on experience</h4>
+                  <p>
+                    Every month, we launch diverse projects that enhance your portfolio and showcases your skills to potential employers.                   </p>
+                </div>
+              </div>
+              <div class="perks-card card-interactive card-color">
+                <div class="perks-info">
+                  <h4>Complimentary 
+                    career services</h4>
+                  <p>
+                    Our instructors provide resume reviews, mock interviews and tips on achieving maximum results with minimal effort.
+                  </p>
+                  <a target="_blank" href="https://www.youtube.com/playlist?list=PLNCDg7zJiXhPD0ethFHC-1V1pkvWhc633">Check our mock interviews on YouTube</a>
+                </div>
+                <img src="/assets/images/portfolio-dev-career-service.png" />
+              </div>
+              <div class="perks-card card-interactive card-color">
+                <img src="/assets/images/network-opport.png" />
+                <div class="perks-info">
+                  <h4>Emotional support</h4>
+                  <p>
+                    We know job search is a tough journey. Our members offer encouragement, share experiences, and provide camaraderie, helping alleviate stress and keep motivation high. 
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+
             <!-- Community membership -->
             <section id="membership" class="membership two-col">
               <div class="col-left">
-                <h2>We firmly believe that community is the most powerful method of learning and growth.</h1>
+                <h2 class="gradient">
+                  Connect with Peers<br>
+                  Learn from Experts<br>
+                  Advance Your Career
+                </h2>
                 <p>Membership gives you access to Surfalytics resources, Discord chat, monthly projects on Data Engineering and Business Intelligence, and the option to ask any questions any time, as well as constant support during your journey and career plan.</p>
               </div>
               <div class="service-card card-interactive card-color">
@@ -174,7 +167,7 @@
                   <h2><span class="crossed-price">$75</span> $25 / month</h2>
                   <div class="txt-flex">
                     <p>or $200 / year</p>
-                    <p class="tag"><span>(34% off)</span></p>
+                    <p>(34% off)</p>
                   </div>                  
                 </div>
                 <ul class="membership-ul">
@@ -198,20 +191,26 @@
 
 
             <!-- Course promo -->
-            <section class="course-promo two-col">
-              <div class="col-left">
-                <h4>Data Analytics and Engineering Course</h4>
-                <h2>All-in-one, accessible way to learn analytics</h2>
-              </div>
-              <div class="drop-down">
-                {%- include markdown-files/course-curriculum.md -%}
+            <section class="course-promo">
+              <h2 class="centered gradient">Master your data skills with our Data Analytics and Engineering Course</h2>
+              <div class="two-col">
+                <div class="col-left">
+                  <h4>Course Curriculum</h4>
+                  <div class="drop-down">
+                    {%- include markdown-files/course-curriculum.md -%}
+                  </div>  
+                  <a target="_blank" href="https://youtu.be/bLmf98u0VuA?si=FJ5FqShC1vynwaHE">
+                    <button class="cta-filled">Start the free course</button>
+                  </a>    
+                </div>
+                <img class="course-img card-color" src="/assets/images/course-promo.png">
               </div>
             </section>
 
 
             <!-- Services pricing -->
             <section id="services" class="services-pricing">
-              <h4>Mentoring and Coaching Services Pricing</h4>
+              <h2 class="centered gradient">Mentoring and Coaching Services Pricing</h2>
               <div class="cards-block">
                 <div class="card-color card-interactive service-card">
                   <div class="card-header">                  
@@ -235,7 +234,7 @@
                   <div class="card-header">                  
                     <p>Adjusting Career Trajectory</p>
                     <h2>$500</h2>
-                    <p class="tag">most popular</p>
+                    <p>most popular</p>
                   </div>
                   <div class="card-description">
                     <p>Learn from the experienced engineer who was there and can help you to choose the optimal career path depending on your needs - total compensation, company tier, work/life balance, career growth. </p>
@@ -292,7 +291,7 @@
 
             <!-- FAQ -->
             <section id="faq" class="faq">
-              <h2>Frequently Asked Questions</h2>
+              <h2 class="centered gradient">Frequently Asked Questions</h2>
               {%- include markdown-files/faq.md -%}
 
             </section>
@@ -314,21 +313,21 @@
         <script>
 
           // Tab section
-          document.getElementById("defaultOpen").click();
+          // document.getElementById("defaultOpen").click();
 
-          function openTab(evt, tabName) {
-            var i, tabcontent, tablinks;
-            tabcontent = document.getElementsByClassName("tabcontent");
-            for (i = 0; i < tabcontent.length; i++) {
-              tabcontent[i].style.display = "none";
-            }
-            tablinks = document.getElementsByClassName("tablinks");
-            for (i = 0; i < tablinks.length; i++) {
-              tablinks[i].className = tablinks[i].className.replace(" active", "");
-            }
-            document.getElementById(tabName).style.display = "block";
-            evt.currentTarget.className += " active";
-          }
+          // function openTab(evt, tabName) {
+          //   var i, tabcontent, tablinks;
+          //   tabcontent = document.getElementsByClassName("tabcontent");
+          //   for (i = 0; i < tabcontent.length; i++) {
+          //     tabcontent[i].style.display = "none";
+          //   }
+          //   tablinks = document.getElementsByClassName("tablinks");
+          //   for (i = 0; i < tablinks.length; i++) {
+          //     tablinks[i].className = tablinks[i].className.replace(" active", "");
+          //   }
+          //   document.getElementById(tabName).style.display = "block";
+          //   evt.currentTarget.className += " active";
+          // }
 
           // Menu modal
           function toggleMenu() {
