--- a/assets/gitbook/homepage.css
+++ b/assets/gitbook/homepage.css
@@ -45,14 +45,18 @@ footer {
 
 .card-color {
     border-radius: 20px;
-    border: 1px solid #959AB9;
-    background: #EBECF8;
-    transition: border 0.3s ease;
+    border: 1px solid #9CA2C6;
+    background: #EDEDEE;
+}
+
+.card-interactive {
+    border: 1px solid #9CA2C6;
+    transition: box-shadow 0.3s ease-in;
 }
 
 .card-interactive:hover {
-    border: 1px solid #959AB9;
-    box-shadow: 2px 2px 10px 0px #CCCFEE, -2px -2px 40px 0px #CCCFEE;
+    border: 1px solid #686a789e;
+    box-shadow: 2px 2px 10px 0px #cccfee7d, -2px -2px 40px 0px #cccfeed2;
 }
 
 
@@ -290,17 +294,11 @@ a {
 
 .hero {
     padding-top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.hero button {
-    padding: 16px 32px;
-    font-size: 18px;
-}
-
-.hero .two-col {
-    /* align-items: center; */
-    gap: 0px;
-}
 
 .hero img {
     display: none;
@@ -350,12 +348,95 @@ a {
     width: max-content;
 }
 
-.photo {
-    padding-top: 6rem;
-}
-
 .photo img{
     width: 100%;
+}
+
+/* ABOUT SECTION */
+
+.abt-section {
+    display: flex;
+    flex-direction: column;
+    max-width: 1200px;
+    padding: 16px;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.abt-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 8px;
+}
+
+.abt-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 488px;
+}
+
+.abt-right a {
+    border-bottom: 1px solid #2B3673;
+}
+
+/* UNLEASH YOUR POTENTIAL */
+
+.potential-card {
+    padding: 24px;
+}
+
+.potential-card h4,
+.perks-info h4 {
+    /* font-size: 36px; */
+    font-weight: 900;
+}
+
+.potential-wrap {
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+    justify-content: space-between;
+    margin-top: 32px;
+    gap: 8px;
+
+}
+
+/* WHY DATA PROFESSIONALS CHOOSE SURFALYTICS */
+
+.perks-wrap {
+    margin-top: 64px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.perks-card {
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+}
+
+.perks-card img {
+    max-width: 100%;
+}
+
+.perks-info {
+    max-width: 556px;
+}
+
+.perks-info a {
+    font-size: 1.125rem;
+    border-bottom: 1px solid #2b3673;
+}
+
+.perks-info a:hover {
+    border-bottom: 1px solid #2b36737c;
 }
 
 /* Mobile burger menu */
@@ -401,7 +482,7 @@ footer > .two-col {
 /* Drop-down list */
 
 .drop-down {
-    width: 100vw;
+    margin: 1em 0 1.5em 0;
 }
 
 .faq {
@@ -474,7 +555,7 @@ button:disabled {
 }
 
 .cta-filled{
-    border: 1px solid #2b3673;
+    border: 1px solid #374594;
     background: linear-gradient(45deg, rgb(49 69 176) 48%, rgb(37 7 186) 100%);
     /* transition: 0.3s; */
 }
@@ -510,6 +591,15 @@ nav .cta-filled,
     display: none;
 }
 
+/* COLOR STYLES */
+
+.gradient {
+    background: var(--h-grad, linear-gradient(90deg, #2B3673 0%, #657BF3 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 /* Typography */
 
 @font-face {
@@ -521,7 +611,8 @@ nav .cta-filled,
 
 h1 {
     font-family: 'Source Sans 3';
-    font-size: 34px;
+    font-size: 32px;
+    text-align: center;
     font-weight: 900;
     line-height: 135%;
     margin: 2rem 0 0 0;
@@ -529,7 +620,7 @@ h1 {
 
 h2 {
     color: #2B3673;
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 700;
     line-height: 130%;
     margin: 0px;
@@ -548,9 +639,27 @@ h4 {
     margin: 0;
 }
 
+.col-left h4 {
+    font-weight: 900;
+    margin: 1em 0 0.5em 0;
+}
+
+.col-left h2 {
+    text-align: center;
+    margin: 1em 0 0.5em 0;
+}
+
+.col-left p {
+    display: none;
+}
+
 h5 {
     font-size: 18px;
     font-weight: 500;
+}
+
+.hero p {
+    text-align: center;
 }
 
 .bigger-p {
@@ -572,10 +681,6 @@ footer p > a{
     border-bottom: 1px solid #2b3673b1;
 }
 
-.tag {
-    z-index: 1;
-}
-
 .crossed-price {
     text-decoration: line-through;
     color: #B1B5D0;
@@ -584,7 +689,11 @@ footer p > a{
 .orange-txt {
     color: #fe804c;
     font-weight: 700;
-    font-size: 32px;
+}
+
+.centered {
+    text-align: center;
+    max-width: none;
 }
 
 /* Logos and socials list */
@@ -663,6 +772,11 @@ input {
     background: #fafafa;
 }
 
+.course-img {
+    display: none;
+}
+
+
 /* Career track page styles */
 
 .article-wrap {
@@ -694,11 +808,6 @@ input {
     display: none;
 }
 
-.drop-down {
-    width: 580px;
-}
-
-
 
 /* Desktop styles */
 @media screen and (min-width: 769px) {
@@ -706,6 +815,70 @@ input {
 .hero img {
     display: block;
      width: 42%;
+}
+
+.hero button {
+    padding: 14px 40px;
+    font-size: 18px;
+    border-radius: 10px;
+    border: 1px solid #374594;
+}
+
+.abt-section {
+    flex-direction: row;
+    max-width: 1200px;
+    padding: 64px;
+}
+
+.abt-left h5 {
+    font-size: 28px;
+}
+
+.abt-left h2 {
+    font-size: 50px;
+    font-weight: 900;
+}
+
+.potential-wrap {
+    flex-direction: row;
+    margin-top: 64px;
+}
+
+.potential-card {
+    padding: 32px 40px;
+    max-width: 375px;
+}
+
+.potential-card h4,
+.perks-info h4 {
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.perks-card {
+    flex-direction: row;
+    padding: 48px;
+    gap: 48px;
+}
+
+.perks-card img {
+    max-width: 500px;
+}
+
+.course-img {
+    display: block;
+    max-width: 47%;
+    padding: 16px;
+    mix-blend-mode: darken;
+    box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.10);
+}
+
+.photo {
+    padding-top: 6rem;
+}
+
+.col-left h2 {
+    text-align: left;
 }
 
 /* Career track page styles */
@@ -792,15 +965,28 @@ footer .container {
     padding-top: 90px;
 }
 
+.course-promo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
 .course-promo details {
-    width: 580px;
+    width: 540px;
 }
 
 .two-col {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     gap: 80px;
+}
+
+.course-promo .two-col {
+    align-items: flex-start;
+    margin-top: 3em;
+    
 }
 
 .founder-text-block {
@@ -837,7 +1023,7 @@ footer .container {
 
 .service-card {
     display: flex;
-    padding: 40px 50px;
+    padding: 32px;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
@@ -850,13 +1036,12 @@ footer .container {
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    padding-bottom: 15px;
     border-bottom: dashed 1px #4C4D58;
 }
 
 .card-description {
-    height: 400px;
-    margin: 1em 0;
+    height: 350px;
+    margin: 0 0 1em 0;
 }
 
 .goal-section {
@@ -992,9 +1177,6 @@ summary {
     animation: fadeEffect 1s;
 }
 
-ul {
-    list-style-position: outside;
-}
 
 li {
     font-size: 18px;
@@ -1040,8 +1222,8 @@ h2 {
 }
 
 .col-left h2 {
-    font-size: 64px;
-    font-weight: 700;
+    font-size: 58px;
+    font-weight: 900;
 }
 
 h3 {
@@ -1053,6 +1235,10 @@ h3 {
 
 .col-left h3 {
     font-size: 46px;
+}
+
+.col-left p {
+    display: block;
 }
 
 .col-left a{
@@ -1071,6 +1257,20 @@ footer h4,
 
 h5 {
     margin: 0px;
+}
+
+.course-promo h2 {
+    max-width: 700px;
+}
+
+.col-left h4 {
+    font-size: 28px;
+    font-weight: 700;
+    margin: 1em 0 0.5em 0;
+}
+
+.col-left a {
+    margin-top: 0.5em;
 }
 
 p {
@@ -1116,4 +1316,9 @@ button {
     background: rgba(0, 0, 0, 0.7);
   }
 
+  .membership-ul {
+    margin: 0;
+}
   }
+
+  
